# unbabelizer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: asciinema_demo.cast
scripts/: fetch_licenses.sh
src/unbabelizer/: app.py  cli.py  config.py  log.py  translation.py  types.py  utils.py
src/unbabelizer/locales/de/LC_MESSAGES/: messages.mo  messages.po
src/unbabelizer/modals/: confirm_inevitable.py  po_edit_sc.py  po_review_sc.py  po_translation_sc.py
src/unbabelizer/types/: highlighter.py  note.py  subcommand.py  table_row.py
src/unbabelizer/types/po_file/: handler.py  tag.py
src/unbabelizer/types/translation_service/: config.py  service_definition.py  service_definitions.py  services.py
