[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Dawid Ciepiela", email = "71898979+sarumaj@users.noreply.github.com"},
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "babel==2.17.0",
  "googletrans==4.0.2",
  "jmespath==1.0.1",
  "polib==1.2.0",
  "pydantic==2.11.9",
  "textual==6.1.0",
]
description = "A CLI tool to translate gettext .po files."
keywords = ["translation", "google translate", "po files"]
license = {text = "MIT"}
name = "unbabelizer"
readme = "README.md"
requires-python = ">=3.12"
scripts = {unbabelizer = "unbabelizer.__main__:main"}
version = "0.0.0"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.unbabelizer]
dest_lang = ["de"]
input_paths = ["src"]
locale_dir = "src/unbabelizer/locales"
src_lang = "en"
