[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [
  {name = "Dawid Ciepiela", email = "71898979+sarumaj@users.noreply.github.com"},
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "babel==2.17.0",
  "deep-translator==1.11.4",
  "jmespath==1.0.1",
  "polib==1.2.0",
  "pydantic==2.11.10",
  "textual==6.2.1",
]
description = "A CLI tool to translate gettext .po files."
keywords = ["translation", "google translate", "po files"]
license-files = ["LICENSE", "licenses/*.txt"]
name = "unbabelizer"
readme = "README.md"
requires-python = ">=3.12"
scripts = {unbabelizer = "unbabelizer.__main__:main"}
version = "1.2.3"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.setuptools.package-data]
"unbabelizer.locales" = ["*/LC_MESSAGES/*.po", "*/LC_MESSAGES/*.mo"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.unbabelizer]
dest_lang = ["de", "es", "pl", "ja", "ru"]
input_paths = ["src"]
locale_dir = "src/unbabelizer/locales"
src_lang = "en"
